--- a/src/Row.css
+++ b/src/Row.css
@@ -1,5 +1,16 @@
+.row {
+    margin-left: 20px;
+}
+
 .row_posters {
     display: flex;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    padding: 20px;
+}
+
+.row_posters::-webkit-scrollbar {
+    display: none;
 }
 
 .row_poster {
@@ -12,4 +23,12 @@
 
 .row_poster:hover {
     transform: scale(1.08);
+}
+
+.row_posterLarge {
+    max-height: 250px;
+}
+
+.row_posterLarge:hover {
+    scale: 1.09;
 }
